Use scrollbar-gutter stable to prevent layout shifting when scrollbars appear/disappear

--- a/styles/base.css
+++ b/styles/base.css
@@ -2,7 +2,8 @@
 
 html {
   font-size:16px;
-  scroll-behavior:smooth
+  scroll-behavior:smooth;
+  scrollbar-gutter:stable
 }
 
 body {
